[BUGFIX] tooltip on mobile devices - "useless"
Fixed #519

--- a/lizmap/www/css/map.css
+++ b/lizmap/www/css/map.css
@@ -276,6 +276,9 @@ CSS Sprite positions calculated via http://instantsprite.com/ or https://draeton
   background-position: -600px 0px;
 }
 
+#content.mobile #mapmenu li.tooltip-layer {
+  display:none;
+}
 
 /* navbar */
 .navbar-fixed-top .navbar-inner,
